[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele_menu"
version = "3.0.1"
description = "Telegram menu system"
readme = "README.md"
authors = [
  { name = "Shutkanos", email = "Shutkanos836926@mail.ru" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = [
    "telegram", "menu", "telemenu", "tele_menu",
    "telegram_menu", "tg_menu", "tg", "scene",
    "scenes", "tools", "telebot", "telegram_bot",
    "pytelegrambotapi"
]
dependencies = [
    "pyTelegramBotAPI",
    "db_attribute",
    "sortedcontainers",
    "git+https://github.com/shutkanos/Db-Attribute.git"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/shutkanos/TeleMenu"